\-- release 2.6.4

  * gRPC server will follow the same behavior as NIO HTTP server: reject with Status.FAILED_PRECONDITION when health check failed and reject with Status.UNAVAILABLE when service is paused.
  * Deprecated SummerRunner and replace SummerRunner.run() with AppLifecycleListener.beforeApplicationStart()
  * updated log4j2.xml
  * AppLifecycleHandler handles onIdle event for both NIO HTTP server and gRPC server, implemented with two internal API changes:
    * 1. IdleEventMonitor interval will be provided by IdleEventMonitor.getIdleIntervalMillis() to avoid app from restarting for new config value, and this
    * 2. Config change: added two idle.threshold config items into both nio and grpc configs listed below,
          1.  `cfg_nio.properties`
                * added: `nio.server.idle.threshold.second`
          2.  `cfg_grpc.properties`
                * added: `gRpc.server.idle.threshold.second`


\-- release 2.6.3

  * log root cause for config error
  * memo with log level


\-- release 2.6.2

  * In case of multiple HttpClient instances, each with different ObjectMapper configuration (e.g. different date format), a default shared ObjectMapper instance was being used to parse the response, this has been changed to let each HttpClient instance has its own ObjectMapper instance by passing the ObjectMapper instance from HttpClient to RPCResult.
  * gRPC client config: when trust store is not specified, user can choose default one as JDK or TrustAll
  * IdleEventMonitor only start when the param threshold > 0
  * log refactoring: make HTTP server and gRPC server status log triggered by pool size change when log.trace is enabled
  * -domain <name> will throw exception when folder does not exist


\-- release 2.6.1

  * Fixed all legacy GitHub CodeQL alerts and security issues.

  * Fixed all legacy GitHub Codacy Security Scan reported issues.
